2025-06-19  Niels Möller  <nisse@lysator.liu.se>

	* tests/t-gcd.c (test_one): Fix memory leak.

2020-06-18  Torbjörn Granlund  <tg@gmplib.org>

	* tests/t-gcd.c (test_one): Add cast for malloc result.

2024-10-18  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (mpn_gcd): New function.
	(mpz_gcd): Use mpn_gcd.
	* mini-gmp.h: Add declaration of mpn_gcd.
	* tests/t-gcd.c (test_one): Add testing of mpn_gcd.

2024-03-25 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tests/t-import.c: Do not print unused value.

2024-02-18  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (mpz_gcdext): Fix logic to canonicalize cofactors.
	Bug reported by Guido Vranken.

	* tests/t-gcd.c (gcdext_valid_p): Stricter check that cofactors
	match the documented behavior.
	(test_one): New function, extracted from testmain.
	(testmain): Add exhaustive tests for all inputs |a|, |b| <= 30.

2023-07-20  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (gmp_umullo_limb): New macro, to avoid unintended
	promotion to signed int, in case mp_limb_t is a size smaller than
	int. In particular, mp_limb_t configured to be a 16-bit unsigned
	short, with 32-bit int, leads to undefined signed overflow.
	Problem reported by Vincent Lefevre.
	(gmp_udiv_qrnnd_preinv, gmp_udiv_qr_3by2): Use new macro.

2022-09-08 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tests/t-powm.c: Test some corner cases (e.g. 1^0 mod 1).

2022-09-05  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (mpz_powm): Fix case of x^0 (mod 1), should be 0.
	Reported by Guido Vranken.

2022-05-29 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-mpq.c (mpq_helper_2exp): New helper (internal) function.

2022-04-18  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (gmp_assert_nocarry): Avoid warning about unused
	variable in NDEBUG builds. Reported by Paul Egggert.

2022-04-17 Marco Bodrato <bodrato@mail.dm.unipi.it>
	* mini-mpq.c (mpq_helper_canonicalize): Remove tmp parameter.

2022-03-19 Marco Bodrato <bodrato@mail.dm.unipi.it>
